# EtaComp2k25

./: .gitignore  README.md  pyproject.toml  requirements.txt
cursor_pdf_import_kit/: .cursorrules  .gitignore  Makefile  prompts.md  requirements.txt
cursor_pdf_import_kit/docs/: README.md
cursor_pdf_import_kit/tools/: pdf_to_md.py
data/comparators/: Mitutoyo1.json  Profil_0.json  Profil_1.json  Profil_2.json  Profil_3.json  Profil_4.json  Profil_5.json  Profil_6.json  Profil_7.json
data/sessions/: Xavier_MAQUET_20250827_171505.json
docs/: INDEX_DOCUMENTATION.md  SPECIFICATION_FONCTIONNELLE_EtaComp2K25.md  SYNTHESE_IMPLEMENTATIONS_18-02-2026.md  code-map.md  data-model-reverse.md  refactoring-plan.md  reverse-architecture.md
src/etacomp/: app.py
src/etacomp/calculations/: __init__.py  errors.py
src/etacomp/config/: defaults.py  export_config.py  paths.py  prefs.py  tesa.py
src/etacomp/core/: calculation_engine.py  session_adapter.py
src/etacomp/io/: pdf_exporter.py  serial_manager.py  serialio.py  storage.py  tesa_reader.py
src/etacomp/models/: banc_etalon.py  comparator.py  detenteur.py  session.py
src/etacomp/rules/: __init__.py  tolerance_engine.py  tolerances.py  verdict.py
src/etacomp/state/: session_store.py
src/etacomp/tools/: migrate_comparators.py  migrate_tolerances.py  serial_probe.py
src/etacomp/ui/: help_dialog.py  main_window.py  (+3 more)
tests/: test_calculation_engine.py  test_comparator_profile.py  test_smoke.py  test_tolerance_engine.py  test_tolerance_engine_intervals.py  test_tolerances_engine.py  test_ui_results_provider.py
(+18 files in other folders)
