[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etacomp2k25"
version = "0.1.2"
description = "EtaComp2K25 — application d'étalonnage de comparateurs (UI PySide6)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Xavier Maquet" }]
dependencies = [
  "PySide6>=6.7",
  "pydantic>=2.8",
  "numpy>=2.0",
  "matplotlib>=3.8",
  "pyserial>=3.5",
  "reportlab>=4.0"
]

[project.scripts]
etacomp = "etacomp.app:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
etacomp = [
  
]
